// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitInputField should render as disabled field 1`] = `
<div
  className="container-unit-input-field"
>
  <FormGroup
    fieldId="quota-limit-resource-quota-form-group"
    label="Quota Limit"
    labelIcon={
      <LabelIcon
        text="Descriptive title."
      />
    }
    validated="default"
  >
    <InputGroup>
      <InputGroupItem>
        <TextInput
          id="resource-quota-reg-token-life-time-input"
          isDisabled={true}
          max={5}
          min={0}
          onChange={[Function]}
          ouiaId="resource-quota-reg-token-life-time-input"
          validated="default"
          value={0}
        />
      </InputGroupItem>
      <InputGroupItem>
        <Dropdown
          dropdownItems={
            Array [
              <DropdownItem
                id="unit-dropdownitem-mib"
                ouiaId="unit-dropdownitem-mib"
              >
                MiB
              </DropdownItem>,
              <DropdownItem
                id="unit-dropdownitem-gib"
                ouiaId="unit-dropdownitem-gib"
              >
                GiB
              </DropdownItem>,
            ]
          }
          isOpen={false}
          onSelect={[Function]}
          ouiaId="resource-quota-unit-input-field-input-group-item-dropdown"
          toggle={
            <DropdownToggle
              isDisabled={true}
              onToggle={[Function]}
              ouiaId="resource-quota-unit-input-field-input-group-item-dropdowni-toggle"
            >
              MiB
            </DropdownToggle>
          }
        />
      </InputGroupItem>
    </InputGroup>
  </FormGroup>
</div>
`;

exports[`UnitInputField should render default 1`] = `
<div
  className="container-unit-input-field"
>
  <FormGroup
    fieldId="quota-limit-resource-quota-form-group"
    label="Quota Limit"
    labelIcon={
      <LabelIcon
        text="Descriptive title."
      />
    }
    validated="default"
  >
    <InputGroup>
      <InputGroupItem>
        <TextInput
          id="resource-quota-reg-token-life-time-input"
          isDisabled={false}
          max={5}
          min={0}
          onChange={[Function]}
          ouiaId="resource-quota-reg-token-life-time-input"
          validated="default"
          value={0}
        />
      </InputGroupItem>
      <InputGroupItem>
        <Dropdown
          dropdownItems={
            Array [
              <DropdownItem
                id="unit-dropdownitem-mib"
                ouiaId="unit-dropdownitem-mib"
              >
                MiB
              </DropdownItem>,
              <DropdownItem
                id="unit-dropdownitem-gib"
                ouiaId="unit-dropdownitem-gib"
              >
                GiB
              </DropdownItem>,
            ]
          }
          isOpen={false}
          onSelect={[Function]}
          ouiaId="resource-quota-unit-input-field-input-group-item-dropdown"
          toggle={
            <DropdownToggle
              isDisabled={false}
              onToggle={[Function]}
              ouiaId="resource-quota-unit-input-field-input-group-item-dropdowni-toggle"
            >
              MiB
            </DropdownToggle>
          }
        />
      </InputGroupItem>
    </InputGroup>
  </FormGroup>
</div>
`;

exports[`UnitInputField should render without dropdown (single unit) 1`] = `
<div
  className="container-unit-input-field"
>
  <FormGroup
    fieldId="quota-limit-resource-quota-form-group"
    label="Quota Limit"
    labelIcon={
      <LabelIcon
        text="Descriptive title."
      />
    }
    validated="default"
  >
    <InputGroup>
      <InputGroupItem>
        <TextInput
          id="resource-quota-reg-token-life-time-input"
          isDisabled={false}
          max={5}
          min={0}
          onChange={[Function]}
          ouiaId="resource-quota-reg-token-life-time-input"
          validated="default"
          value={0}
        />
      </InputGroupItem>
      <InputGroupText>
        cores
      </InputGroupText>
    </InputGroup>
  </FormGroup>
</div>
`;
